# SuperPower

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TRADING.md  docker-compose.yml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml  superpower-tests.yml  trading-tests.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  index.html
docs/bugs/: BUGS.md
skills/subagent-driven-development/scripts/: review-package  task-brief
skills/trading-analysis/: SKILL.md
skills/trading-backtest/: SKILL.md
skills/trading-portfolio-review/: SKILL.md
trading/: README.md  __init__.py  default_config.py  pyproject.toml  reporting.py  ticker_universe.py
trading/agents/: __init__.py  schemas.py
trading/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py
trading/agents/managers/: portfolio_manager.py
trading/agents/researchers/: debate.py  risk_researcher.py
trading/agents/risk_mgmt/: risk_manager.py
trading/agents/trader/: trader.py
trading/agents/utils/: agent_states.py  agent_utils.py  memory.py  signal.py
trading/backtesting/: metrics.py  midas.py
trading/broker/: __init__.py  alpaca.py  base.py  paper.py
trading/cli/: main.py  stats_handler.py
trading/data/: __init__.py
trading/dataflows/: __init__.py  alpha_vantage_stock.py  config.py  errors.py  market_data_validator.py  polymarket.py  symbol_utils.py  world_bank.py  y_finance.py  yfinance_news.py
trading/execution/: __init__.py  velocity.py
trading/graph/: __init__.py  propagation.py  setup.py  trading_graph.py
trading/llm_clients/: __init__.py  factory.py
trading/monitoring/: __init__.py  dashboard.py  janus.py  trend.py
trading/portfolio/: __init__.py  arcane.py
trading/risk/: __init__.py  aegis.py
trading/tests/: conftest.py  test_interoperability.py
trading/tests/test_agents/: test_portfolio_manager.py  test_researcher.py  test_risk_manager.py  test_sentiment_analyst.py  test_trader.py
trading/tests/test_backtesting/: test_metrics.py  test_midas.py
trading/tests/test_broker/: test_paper.py
trading/tests/test_dataflows/: test_symbol_utils.py
trading/tests/test_execution/: test_velocity.py
trading/tests/test_graph/: test_setup.py
trading/tests/test_llm_clients/: test_factory.py
trading/tests/test_monitoring/: test_trend.py
trading/tests/test_portfolio/: test_arcane.py
trading/tests/test_risk/: test_aegis.py
trading/tests/test_signal/: test_processor.py
